--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="17SPp1YOURNAME" default="default" basedir=".">
-    <description>Builds, tests, and runs the project 17SPp1YOURNAME.</description>
+<project name="17SUp1Adams" default="default" basedir=".">
+    <description>Builds, tests, and runs the project 17SUp1Adams.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
